# ligo

./: .gitignore  .gitlab-ci.yml  0001-PtHangz2-replace-PtHangzh.patch  Makefile  dune  esy.backup2.json  esy.json  ligo.opam  package.json  static.esy.json  webpack.config.js
.github/workflows/: build.yaml  bundle-release.js
docker/: .dockerignore
esy.lock/: index.json
esy.lock/overrides/opam__s__bls12_381_legacy_opam__c__0.4.4_opam_override/: package.json~
esy.lock/overrides/opam__s__bls12_381_legacy_opam__c__0.4.4_opam_override/files/: winpatch.patch~
esy.lock/overrides/opam__s__irmin_pack_opam__c__2.8.0_opam_override/: package.json~
esy.lock/overrides/opam__s__linenoise_opam__c__1.3.1_opam_override/files/: winpatch.patch~
esy.lock/overrides/opam__s__tezos_rust_libs_opam__c__1.1_opam_override/files/: winpatch.patch
esy.lock/overrides/opam__s__time__now_opam__c__v0.14.0_opam_override/: package.json~
src/: dune
src/environment/: dune
src/main/api/: dune  ligo_api.ml  run.ml
src/main/api/compile/: compile.ml  dune
src/main/api/formatter/: dune  formatter.ml
src/main/api/helpers/: dune
src/main/compile/: dune  helpers.ml  of_michelson.ml  of_mini_c.ml
src/main/fuzz/shared/: dune
src/main/interpreter/: michelson_backend.ml  tezos_state.ml
src/main/main_errors/: dune  formatter.ml  types.ml
src/main/run/: of_michelson.ml
src/passes/00-preprocessing/: dune
src/passes/00-preprocessing/shared/: dune
src/passes/01-lexing/: dune
src/passes/01-lexing/cameligo/: Token.ml  dune
src/passes/01-lexing/jsligo/: Self_tokens.ml  Token.ml  dune
src/passes/01-lexing/pascaligo/: Token.ml  dune
src/passes/01-lexing/reasonligo/: Token.ml  dune
src/passes/01-lexing/shared/: LexerMainGen.ml  dune
src/passes/02-parsing/: dune
src/passes/02-parsing/cameligo/: dune
src/passes/02-parsing/jsligo/: dune
src/passes/02-parsing/pascaligo/: dune
src/passes/02-parsing/reasonligo/: dune
src/passes/02-parsing/shared/: Common.ml  ParserMainGen.ml  dune
src/passes/03-self_cst/: dune
src/passes/03-self_cst/cameligo/: dune
src/passes/03-self_cst/jsligo/: dune
src/passes/03-self_cst/pascaligo/: dune
src/passes/03-self_cst/reasonligo/: dune
src/passes/05-self_ast_imperative/: dune  literals.ml  tezos_type_annotation.ml
src/passes/06-purification/: dune
src/passes/07-self_ast_sugar/: dune
src/passes/08-desugaring/: dune
src/passes/09-self_ast_core/: dune
src/passes/09.5-inference/database_plugins/: dune
src/passes/09.5-inference/type_variable_abstraction/: dune
src/passes/09.5-inference/typer_common/: dune  errors.ml
src/passes/10-checking/: dune
src/passes/11-self_ast_typed/: dune
src/passes/12-spilling/: dune
src/passes/13-self_mini_c/: dune
src/passes/15-self_mini_c/: dune
src/passes/16-self_michelson/: dune
src/passes/17-stacking/: decompiler.ml  dune
src/passes/18-self_michelson/: dune
src/passes/predefined/: dune
src/stages/1-cst/cameligo/: dune
src/stages/1-cst/jsligo/: Printer.ml  dune
src/stages/1-cst/pascaligo/: dune
src/stages/1-cst/reasonligo/: dune
src/stages/2-ast_imperative/: dune
src/stages/3-ast_sugar/: PP.ml  dune
src/stages/4-ast_core/: dune
src/stages/5-ast_typed/: dune
src/stages/7-mini_c/: dune
src/stages/common/: dune
src/stages/ligo_interpreter/: dune  types.ml
src/stages/typesystem/: dune
static.esy.esy.lock/: index.json
vendors/LexerLib/: Core.mll  LexerLib.opam  dune
vendors/ligo-utils/: dune
vendors/ligo-utils/ligo-core/: dune  dune-project  ligo-core.opam  ligo_core.ml
vendors/ligo-utils/memory-proto-alpha/: tezos-memory-proto-alpha.opam
vendors/ligo-utils/proto-alpha-utils/: dune  init_proto_alpha.ml  x_memory_proto_alpha.ml
vendors/ligo-utils/simple-utils/: Utils.ml  dune  simple-utils.opam  snippet.ml  x_list.ml  x_map.ml
vendors/ligo-utils/simple-utils/simple-utils.esy.lock/: index.json
vendors/ligo-utils/tezos-utils/: dune  tezos-utils.opam  tezos_utils.ml  time.ml  time.mli
