(library
 (name ligo_api)
 (public_name ligo.api)
 (instrumentation
  (backend bisect_ppx))
 (flags "-open" "Ligo_api_formatter")
 (libraries ligo.api.helpers ligo_api_compile simple-utils build))

(rule
 (targets changelog.ml)
 (deps
  (env_var CHANGELOG_PATH))
 (action
  (with-stdout-to
   changelog.ml
   (run "sh" "-c"
     "printf 'let changelog = {changelog|%s|changelog}' \"$(cat ${CHANGELOG_PATH:-../../../gitlab-pages/docs/intro/changelog.md})\""))))
