;; Build of the LIGO preprocessors

(library
 (name preprocessing)
 (public_name ligo.preprocessing)
 (instrumentation
  (backend bisect_ppx))
 (flags (:standard -open Base -open Stdio))
 (libraries
   stdio
  ;; Vendors
  Preprocessor
  simple-utils
  ;; LIGO
  preprocessing_shared
  preprocessing_pascaligo
  preprocessing_cameligo
  preprocessing_reasonligo
  preprocessing_jsligo)
 (modules Preprocessing Errors Pascaligo Cameligo Reasonligo Jsligo))
