(library
 (name self_ast_imperative)
 (public_name ligo.self_ast_imperative)
 (instrumentation
  (backend bisect_ppx))
 (modules_without_implementation syntax)
 (libraries base simple-utils ast_imperative tezos-crypto tezos-base main_warnings)
  (flags (:standard -open Base))
 (preprocess
  (pps ppx_poly_constructor)))
