(library
  (name tezos_utils)
  (public_name tezos-utils)
  (libraries
    tezos-clic
    tezos-rpc
    tezos-error-monad
    tezos-stdlib
    ptime
    tezos-event-logging
    tezos-lwt-result-stdlib
    tezos-micheline
    data-encoding
    simple-utils
    base
  )
 (flags (:standard -open Tezos_stdlib
                   -open Tezos_lwt_result_stdlib
                   -open Data_encoding
                   -open Tezos_error_monad
                   -open Tezos_error_monad.TzLwtreslib
                   -open Tezos_rpc
                   -open Tezos_clic
                   -open Tezos_micheline
                   -open Tezos_event_logging
                   -open Core
                   ))
)
