;; Parsing as a library

(library
 (name parsing_shared)
 (public_name ligo.parsing.shared)
 (instrumentation
  (backend bisect_ppx))
 (flags (:standard -open Stdio -open Base))
 (libraries
  base
  ;; Vendors
  simple-utils
  Preprocessor
  ParserLib
  ;; LIGO
  lexing_shared
  ;; Third party
  pprint)
 (modules Errors Formatter Common ParserMainGen))
